// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator custom_generator {
  provider = "prisma-generator-fake-data"
}
generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

model Resto {
  id           String         @id @default(uuid())
  name         String
  address      String?
  createdAt    DateTime       @default(now())
  users        User[]
  products     ProductStock[]
  transactions Transaction[]
  shopData     ShopData[]
}

model User {
  id            String    @id @default(uuid())
  name          String
  username      String    @unique
  email         String?   @unique
  emailVerified DateTime?
  image         String?
  password      String?
  role          String    @default("UNKNOW")
  restoId       String?
  resto         Resto?    @relation(fields: [restoId], references: [id])
}

model ProductStock {
  id           String     @id @unique
  restoId      String?
  resto        Resto?     @relation(fields: [restoId], references: [id], onDelete: Cascade)
  name         String
  imageProduct String?
  price        Float
  stock        Float
  cat          String

  Product Product[]
}

model Product {
  id            String          @id @default(uuid())
  productId     String
  productstock  ProductStock    @relation(fields: [productId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  sellprice     Float
  restoId       String?
  OnSaleProduct OnSaleProduct[]

  @@unique([productId])
}

model OnSaleProduct {
  id            String      @id @default(uuid())
  productId     String
  quantity      Int
  saledate      DateTime    @default(now())
  transactionId String
  product       Product     @relation(fields: [productId], references: [productId], onDelete: Cascade, onUpdate: Cascade)
  transaction   Transaction @relation(fields: [transactionId], references: [id], onDelete: Cascade)

  @@index([productId, transactionId])
}

model Transaction {
  id          String          @id @default(uuid())
  totalAmount Decimal?
  createdAt   DateTime        @default(now())
  isComplete  Boolean         @default(false)
  restoId     String?
  resto       Resto?          @relation(fields: [restoId], references: [id], onDelete: Cascade)
  products    OnSaleProduct[]
  revenueType String?         @default("alacarte")
}

model ShopData {
  id      String  @id @default(uuid())
  tax     Int?
  name    String?
  address String?
  phone   String?
  restoId String?
  resto   Resto?  @relation(fields: [restoId], references: [id], onDelete: Cascade)
}


